wip: MON-712 engine, server and setup screen
